# dQP

./: LICENSE  README.md  pyproject.toml
dqp/: __init__.py  dQP.py  lin_solvers.py  qp_diagnostic.py  unit_test.py
examples/: example_qp.py  osqp_example.py
experiments/diagnostic/: README.md
experiments/geometry/: mapping.py  mapping_layer.py
experiments/mega_test/: exp_utils.py
experiments/quadratic_mpc/: parameter_space.py
experiments/sudoku/: models.py
